added main files (primary lable)

--- a/bcb.html
+++ b/bcb.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
                                                                                          <!--ata holo slider er link gulo-->
-      <link href="bcb.css" rel="stylesheet">
+      <link href="./css/bcb.css" rel="stylesheet">
       <link href="players/bangladesh.png" rel="icon" type="image/png"/>
       
       
